@@ -14,7 +14,7 @@ rcsb.utils.multiproc >= 0.18
 rcsb.utils.chemref >= 0.77
 scandir; python_version < "3.0"
 configparser; python_version < "3.0"
-rcsb.utils.dictionary >= 0.46
+rcsb.utils.dictionary >= 0.51
 rcsb.utils.repository >= 0.16
 #
 SQLAlchemy; sys_platform == 'linux'
